css/weather-styles.css
:root {
    --bg-color: #134074;
    --bg-color-secondary: #13315C;
    --bg-color-header: #0B2545;
    --text-color-main: #EEF4ED;
    --accent-color: #8DA9C4;
}

* {
    font-family: "Mulish", sans-serif;
    font-size: 1em;
}

body {
    background-color: var(--bg-color);
    color: whitesmoke !important;
}

h1,
h2,
h3,
h4 {
    font-family: 'Merriweather', serif;
}

header {
    background-color: var(--bg-color-header);
    border: 1px solid transparent;
}

main {
    background-color: var(--bg-color-secondary);
    height: 100vh;
}

.weather-blocks {
    display: flex;
    flex-direction: column;
}

#map-container {
    background-color: var(--accent-color);
    position: relative;
}

#map {
    width: 100%;
    height: 300px;
}

#search-form * {
    border: none;
    outline: none;
    height: 2em;
}

#search-btn:hover {
    cursor: pointer;
    background-color: var(--bg-color);
    color: white;
}

#search-btn:active {
    background-color: rgba(0, 0, 0, 0.24);
}

.coordinates {
    background: rgba(0, 0, 0, 0.5);
    color: #fff;
    position: absolute;
    bottom: 50px;
    left: 25px;
    padding: 5px 10px;
    margin: 0;
    font-size: 11px;
    line-height: 18px;
    border-radius: 3px;
}

@media (min-width: 320px) and (max-width: 767.98px) {
    .weather-card {
        justify-content: space-evenly !important;
    }
}

@media (max-width: 768px) {
    .weather-card {
        width: 100%;
        display: flex;
        flex-direction: row;
        align-items: center;
        flex-wrap: wrap;
        justify-content: space-between;
    }

    .weather-card:nth-of-type(1) {
        border-bottom: 1px solid #868686;
    }

    .weather-card:nth-of-type(2) {
        border-bottom: 1px solid #868686;
    }

    .weather-card:nth-of-type(3) {
        border-bottom: 1px solid #868686;
    }

    .weather-card:nth-of-type(4) {
        border-bottom: 1px solid #868686;
    }
}

@media (min-width: 768px) {

    .weather-card {
        width: 20%;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .weather-card:nth-of-type(1) {
        border-right: 1px solid #868686;
    }

    .weather-card:nth-of-type(2) {
        border-right: 1px solid #868686;
    }

    .weather-card:nth-of-type(3) {
        border-right: 1px solid #868686;
    }

    .weather-card:nth-of-type(4) {
        border-right: 1px solid #868686;
    }

}

@media (min-width: 1200px) {
    #map {
        height: 500px
    }
}

